--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Round Up</string>
+    <string name="player_error">Error initializing YouTube player: %s</string>
 </resources>
