intro page, login page ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="submit">Submit</string>
     <string name="searching_text">Searching Text</string>
     <string name="done">Done</string>
+    <string name="start">start</string>
+    <string name="next">next</string>
 </resources>
