--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="continu">Continue</string>
     <string name="resend_code">Resend Code</string>
     <string name="enter_otp_error">Please enter given OTP.</string>
+    <string name="latest_videos">Latest Videos</string>
+    <string name="view_all">View All</string>
 </resources>
