--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="pdf">PDF</string>
     <string name="video">VIDEO</string>
     <string name="solution">SOLUTION</string>
-    <string name="testtxt">TEST</string>
+    <string name="testtxt">PDF</string>
     <string name="whatsapp">WHATSAPP</string>
     <string name="update">JOB\n NOTIFICATION</string>
     <string name="aboutus">ABOUT US</string>
